@@ -5,6 +5,9 @@
   or group name contains characters that are not compatible with the
   eventlistener protocol.
 
+- Fixed a bug where the ``tail -f`` command in ``supervisorctl`` would fail
+  if the combined length of the username and password was over 56 characters.
+
 3.0b2 (2013-05-28)
 ------------------
 
